--- a/src/components/sluzby/Sluzby.css
+++ b/src/components/sluzby/Sluzby.css
@@ -34,7 +34,7 @@ html { box-sizing: border-box; }
     border: var(--barva) 2px solid;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.18); 
     aspect-ratio: 1 / 1;
-    padding: 3% 0;
+    padding: 3%;
 
 }
 
